# project-matrix-busters

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  Cargo.toml  GUIDE.md  README.md  WORKSPACE  matrix.tex
.github/workflows/: release.yml  rust-checks.yml  rust-format.yml
assets/: BUILD  Cargo.toml  dft.py  dft.rs  dft_andrzej.json  dft_result.json  dft_source.json
fourier/: BUILD
fractal_clock/: BUILD
locale/: BUILD
locale/src/: locale.rs
patches/: khronos_api.patch
scripts/: fmt.sh
src/: constants.rs  editor_gui.rs  env_gui.rs  environment.rs  float.rs  fourier.rs  fractal_clock.rs  latex.rs  lib.rs  locale.rs  main.rs  matrices.rs  matrix_algorithms.rs  parser.rs  rationals.rs  traits.rs
