[package]
name = "jp2gmd"
version = "0.1.0"
edition = "2021"
authors = ["Mieszko Grodzicki", "Aleksander Tudruj"]

[[bin]]
name = "jp2gmd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
eframe = "0.20.1"
num-rational = "0.4.1"
num-traits = "0.2.15"
anyhow = "1.0.66"
image = "0.24.2"
lazy_static = "1.4.0"
clipboard = "0.5.0"
clap = { version = "4.1.1", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
# The latest version of `egui-toast` is not compatible with `egui` 0.20.1
# We use our fork of `egui-toast` until the issue is fixed
# The PR was created and when merged we can use the original crate [https://github.com/urholaukkarinen/egui-toast/pull/4]
egui-toast = { git = "https://github.com/tudny/egui-toast", branch = "egui-boost" }
