[workspace]
members = [
    "assets",
]

[package]
name = "jp2gmd"
version = "0.1.0"
edition = "2021"
authors = ["Mieszko Grodzicki", "Aleksander Tudruj"]

[[bin]]
name = "jp2gmd"
path = "src/main.rs"

[lib]
name = "jp2gmd_lib"
path = "src/lib.rs"
doctest = true

[features]
fft = []
clock = []
easter-eggs = ["clock", "fft"]

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
num-rational = "0.4.1"
num-traits = "0.2.15"
anyhow = "1.0.66"
image = "0.24.2"
lazy_static = "1.4.0"
arboard = "3.2.0"
clap = { version = "4.1.1", features = ["derive"] }
chrono = "0.4"
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.5"
egui-toast = "0.6.0"
